# lapce

./: .gitmodules  Cargo.toml  README.md  default.nix
.cargo/: config.toml
.github/workflows/: build.yml  ci.yml  release.yml
core/: Cargo.toml
core/src/: command.rs  config.rs  data.rs  language.rs  lib.rs  palette.rs  terminal.rs
defaults/: dark-theme.toml  light-theme.toml
lapce-app/: Cargo.toml
lapce-core/: Cargo.toml
lapce-core/queries/c/: highlights.scm
lapce-core/queries/cpp/: highlights.scm
lapce-core/queries/dockerfile/: highlights.scm
lapce-core/queries/ecma/: highlights.scm
lapce-core/queries/julia/: highlights.scm
lapce-core/queries/prisma/: highlights.scm
lapce-core/queries/typescript/: highlights.scm
lapce-core/src/: buffer.rs  language.rs  style.rs
lapce-data/: Cargo.toml
lapce-data/src/: data.rs  document.rs  editor.rs
lapce-proxy/: Cargo.toml
lapce-proxy/src/: buffer.rs
lapce-rpc/: Cargo.toml
lapce-ui/: Cargo.toml
lapce-ui/src/: app.rs  panel.rs
lapce-ui/src/editor/: view.rs
proxy/: Cargo.toml
