[package]
name = "lapce-rpc"
version = "0.0.1"
authors = ["Dongdong Zhou <dzhou121@gmail.com>"]
edition = "2018"

[dependencies]
parking_lot = "0.12.0"
anyhow = "1.0.34"
serde_json = "1.0.59"
serde = "1.0"
jsonrpc-lite = "0.5.0"
crossbeam-channel = "0.5.0"
lsp-types = { version = "0.92.1", features = ["proposed"] }
xi-rope = { git = "https://github.com/lapce/xi-editor", features = ["serde"] }
